// Copyright 2020 Anapaya Systems
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/scionproto/scion/go/pkg/proto/control_plane";

package proto.control_plane.v1;

import "proto/drkey/mgmt/v1/mgmt.proto";

service DRKeyInterService{
    // Return the Lvl1Key that matches the request
    rpc Lvl1(proto.drkey.mgmt.v1.Lvl1Request) returns (proto.drkey.mgmt.v1.Lvl1Response) {}
}

service DRKeyIntraService{
    // Return the ASAS that matches the request
    rpc IntraLvl1(proto.drkey.mgmt.v1.IntraLvl1Request) returns (proto.drkey.mgmt.v1.IntraLvl1Response) {}
    // Return the AS-Host that matches the request
    rpc ASHost(proto.drkey.mgmt.v1.ASHostRequest) returns (proto.drkey.mgmt.v1.ASHostResponse) {}
    // Return the Host-AS that matches the request
    rpc HostAS(proto.drkey.mgmt.v1.HostASRequest) returns (proto.drkey.mgmt.v1.HostASResponse) {}
    // Return the Host-Host that matches the request
    rpc HostHost(proto.drkey.mgmt.v1.HostHostRequest) returns (proto.drkey.mgmt.v1.HostHostResponse) {}
    // Return the SV that matches the request
    rpc SV(proto.drkey.mgmt.v1.SVRequest) returns (proto.drkey.mgmt.v1.SVResponse) {}
}
